Agrega funcionalidad de experiencia dinámica

--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
         </aside>
 
         <main>
-            
+    
             <section class="reveal">
                 <div class="section-header">
                     <div class="icon-box"><i data-lucide="briefcase" size="28"></i></div>
                     <h2 class="section-title">Trayectoria Profesional</h2>
                 </div>
 
-                <div class="timeline">
+                <div class="timeline" id="experience-timeline">
                     <div class="exp-card">
                         <div class="timeline-dot dot-sky"></div>
                         <div class="exp-header">
@@ -162,58 +162,15 @@
                             </li>
                         </ul>
                     </div>
-                </div>
-            </section>
 
-            <hr style="border: 0; height: 1px; background: var(--slate-100); margin: 3rem 0;">
-
-            <section class="reveal">
-                <div class="section-header">
-                    <div class="icon-box" style="background: var(--emerald-100); color: var(--emerald-600); box-shadow: none;">
-                        <i data-lucide="award" size="28"></i>
-                    </div>
-                    <h2 class="section-title">Certificaciones</h2>
-                </div>
-
-                <div class="cert-grid">
-                    <div class="cert-card">
-                        <i data-lucide="shield-check" class="cert-bg-icon" size="64"></i>
-                        <i data-lucide="shield-check" style="color: var(--emerald-500); margin-bottom: 0.5rem;" size="24"></i>
-                        <h4 style="font-weight: 700; color: var(--slate-800); font-size: 0.9rem;">Google Cybersecurity</h4>
-                        <p style="font-size: 0.75rem; color: var(--slate-400);">Coursera</p>
-                    </div>
-                    <div class="cert-card">
-                        <i data-lucide="code-2" class="cert-bg-icon" size="64"></i>
-                        <i data-lucide="code-2" style="color: var(--emerald-500); margin-bottom: 0.5rem;" size="24"></i>
-                        <h4 style="font-weight: 700; color: var(--slate-800); font-size: 0.9rem;">Front-End Development</h4>
-                        <p style="font-size: 0.75rem; color: var(--slate-400);">Meta - Coursera</p>
-                    </div>
-                    <div class="cert-card">
-                        <i data-lucide="cpu" class="cert-bg-icon" size="64"></i>
-                        <i data-lucide="cpu" style="color: var(--emerald-500); margin-bottom: 0.5rem;" size="24"></i>
-                        <h4 style="font-weight: 700; color: var(--slate-800); font-size: 0.9rem;">Scrum Framework</h4>
-                        <p style="font-size: 0.75rem; color: var(--slate-400);">SENA</p>
+                    <div class="reveal" style="margin-top: 1rem; display: flex; justify-content: center; width: 100%;">
+                        <button id="add-experience-btn" class="btn-github" style="cursor: pointer; background: var(--slate-100); border: 1px dashed var(--sky-400); color: var(--slate-600); width: auto;">
+                            <i data-lucide="plus-circle" size="16"></i>
+                            Añadir Experiencia
+                        </button>
                     </div>
                 </div>
             </section>
-
-            <section class="reveal" style="margin-top: 3rem;">
-                <div class="academic-footer">
-                    <div class="footer-glow"></div>
-                    <div style="position: relative; z-index: 5;">
-                        <div style="display: flex; align-items: center; gap: 0.5rem; margin-bottom: 0.5rem;">
-                            <i data-lucide="server" style="color: var(--sky-400);" size="20"></i>
-                            <span style="color: var(--sky-400); font-size: 0.75rem; font-weight: 700; text-transform: uppercase; letter-spacing: 0.1em;">Docencia Académica</span>
-                        </div>
-                        <h3 style="font-size: 1.25rem; font-weight: 700;">Monitor Universitario</h3>
-                        <p style="color: var(--slate-400); font-size: 0.9rem; margin-top: 0.25rem;">Tutorías en Algoritmos y Estructuras de Datos (+50 estudiantes)</p>
-                    </div>
-                    <a href="https://github.com/Milo443" target="_blank" class="btn-github">
-                        Ver GitHub <i data-lucide="external-link" size="16"></i>
-                    </a>
-                </div>
-            </section>
-
         </main>
     </div>
 
